@@ -593,6 +593,31 @@ AC_DEFINE(HAVE_FUNCTION_SYSCTL_KERN_MAXPROC,1,[Define to 1 if 'KERN_MAXPROC' exi
 AC_MSG_RESULT(yes),
 AC_MSG_RESULT(no))
 
+dnl Check for function sysctl (KERN_PIDMAX)
+AC_MSG_CHECKING(for function sysctl (KERN_PIDMAX))
+AC_TRY_COMPILE(
+[
+#ifdef HAVE_SYS_TYPES_H
+#include <sys/types.h>
+#endif /* HAVE_SYS_TYPES_H */
+
+#ifdef HAVE_SYS_PARAM_H
+#include <sys/param.h>
+#endif /* HAVE_SYS_PARAM_H */ 
+
+#include <sys/sysctl.h>
+],
+[
+	size_t	len;
+	int	mib[2] = {CTL_KERN, KERN_PIDMAX}, maxproc;
+
+        len = sizeof(maxproc);
+        sysctl(mib, 2, &maxproc, &len, 0, 0);
+],
+AC_DEFINE(HAVE_FUNCTION_SYSCTL_KERN_PIDMAX,1,[Define to 1 if 'KERN_PIDMAX' exist.])
+AC_MSG_RESULT(yes),
+AC_MSG_RESULT(no))
+
 dnl Check for function sysctl (KERN_CPTIME,KERN_CPTIME2)
 AC_MSG_CHECKING(for function sysctl (KERN_CPTIME,KERN_CPTIME2))
 AC_TRY_COMPILE(
